stop flickering

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -4,8 +4,8 @@
 }
 
 body {
-    font-size: 20px;
-    margin: 5% 10%;
+    font-size: 18px;
+    margin: 5% 15%;
 }
 
 pre {
